@@ -53,18 +53,16 @@ export const IconLabelNode = memo(({ data, id, selected, dragging }: NodeProps<I
   };
 
   return (
-    <div style={{ paddingLeft: '8px', paddingRight: '8px' }}>
-      <div
-        style={{
-          ...nodeStyle,
-          ...dropFeedbackStyle,
-        }}
-        onDragOver={onDragOver}
-        onDrop={handleOnDrop}
-        data-testid={`IconLabel - ${data?.insideLabel?.text}`}>
-        {data.insideLabel ? <Label diagramElementId={id} label={data.insideLabel} faded={data.faded} /> : null}
-        {selected ? <DiagramElementPalette diagramElementId={id} labelId={data?.insideLabel?.id ?? null} /> : null}
-      </div>
+    <div
+      style={{
+        ...nodeStyle,
+        ...dropFeedbackStyle,
+      }}
+      onDragOver={onDragOver}
+      onDrop={handleOnDrop}
+      data-testid={`IconLabel - ${data?.insideLabel?.text}`}>
+      {data.insideLabel ? <Label diagramElementId={id} label={data.insideLabel} faded={data.faded} /> : null}
+      {selected ? <DiagramElementPalette diagramElementId={id} labelId={data?.insideLabel?.id ?? null} /> : null}
     </div>
   );
 });
